--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -4,7 +4,7 @@
     position: fixed;
     left: 0;
     top: 0;
-    background-color: var(--main-bg);
+    background-color: var(--second-bg-dark);
     box-shadow: var(--box-shadow);
 }
 
